<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_time_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="@string/enter_time_explanation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <LinearLayout
            android:id="@+id/spinnersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"/>
            <Spinner
                android:id="@+id/spinnerH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/hours"/>
            <TextView
                android:id="@+id/tv_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"/>
            <Spinner
                android:id="@+id/spinnerMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/min"/>

        </LinearLayout>


        <EditText
            android:id="@+id/edit_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:autofillHints="@string/weight"
            android:hint="@string/weight"
            android:inputType="number"
            android:visibility="gone"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">
            <TableRow>
                <Button
                    android:id="@+id/button_dialog_dismiss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Widget.Button"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorAccentLight"
                    android:text="@string/dismiss"/>
                <Button
                    android:id="@+id/button_dialog_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button"
                    android:background="@color/shadowGrey"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/ok"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>